--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-tdd-course",
+  "name": "spotify-wrapper-player",
   "version": "1.0.0",
   "description": "Nossa biblioteca do curso de JS com TDD na prática.",
   "main": "index.js",
@@ -11,7 +11,8 @@
     "prepush": "npm run lint",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --watch",
-    "test:coverage": "nyc npm test"
+    "test:coverage": "nyc npm test",
+    "start": "./node_modules/.bin/webpack-dev-server"
   },
   "nyc": {
     "reporter": [
@@ -22,23 +23,16 @@
       "tests/**"
     ]
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/willianjusten/js-tdd-course.git"
-  },
   "keywords": [
     "js",
     "tdd",
     "library"
   ],
-  "author": "Willian Justen <willianjustenqui@gmail.com> (https://willianjusten.com.br/)",
+  "author": "Gabriel Cunha <gabriel_mcunha@hotmail.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/willianjusten/js-tdd-course/issues"
-  },
-  "homepage": "https://github.com/willianjusten/js-tdd-course#readme",
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.3.2",
     "babel-register": "^6.24.0",
     "chai": "^3.5.0",
@@ -48,6 +42,10 @@
     "husky": "^0.11.9",
     "mocha": "^3.2.0",
     "nyc": "^10.2.0",
-    "rimraf": "^2.6.1"
-  }
+    "rimraf": "^2.6.1",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
+  },
+  "dependencies": {}
 }
