--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --watch",
     "test:coverage": "nyc npm test",
-    "start": "./node_modules/.bin/webpack-dev-server"
+    "start": "./node_modules/.bin/webpack-dev-server --open"
   },
   "nyc": {
     "reporter": [
@@ -39,6 +39,8 @@
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.6.1",
     "husky": "^0.11.9",
+    "jsdom": "^11.8.0",
+    "jsdom-global": "^3.0.2",
     "mocha": "^3.2.0",
     "nyc": "^10.2.0",
     "rimraf": "^2.6.1",
@@ -46,5 +48,7 @@
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "spotify-wrapper": "^2.0.5"
+  }
 }
